# SamurEyeConsole

./: .replit  app.py  install.sh  install_telemetry.sh  models.py  pyproject.toml  replit.md  samureye_telemetry.py
attached_assets/: Pasted--2025-12-29-21-41-46-116-ERROR-in-app-Exception-on-dash_1767044546047.txt  Pasted--INFO-Creating-systemd-service-INFO-Configuring-Nginx-I_1766515014449.txt  Pasted--INFO-Installing-Python-dependencies-Requirement-alread_1766520081559.txt  Pasted--Requirement-already-satisfied-blinker-1-9-0-in-venv-li_1766521025452.txt  Pasted-Installing-new-version-of-config-file-etc-apparmor-d-ub_1766501041532.txt  Pasted-Setting-up-libfile-fcntllock-perl-0-22-4ubuntu5-Setting_1766501679128.txt  Pasted-root-templateubuntu-curl-sSL-https-raw-githubuserconten_1766502701541.txt  Pasted-root-templateubuntu-curl-sSL-https-raw-githubuserconten_1766502812227.txt  Pasted-root-templateubuntu-curl-sSL-https-raw-githubuserconten_1766513460317.txt  Pasted-root-templateubuntu-curl-sSL-https-raw-githubuserconten_1766513597822.txt  Pasted-root-templateubuntu-curl-sSL-https-raw-githubuserconten_1766513940474.txt  Pasted-root-templateubuntu-opt-samureye-cloud-curl-sSL-https-r_1766521221608.txt  Pasted-root-vlxsam99-tail-f-var-log-samureye-telemetry-log-202_1766951371748.txt
templates/: appliance_form.html  appliance_view.html  base.html  contract_form.html  contract_view.html  contracts.html  dashboard.html  login.html
