[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "eventlet>=0.40.4",
    "flask>=3.1.2",
    "flask-login>=0.6.3",
    "flask-socketio>=5.5.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psutil>=7.1.3",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "python-socketio>=5.15.1",
    "requests>=2.32.5",
    "werkzeug>=3.1.4",
]
